@startuml Demy: Domain Model Diagram (Grouped by Bounded Context)

skinparam class {
    BackgroundColor LightYellow/D3F5F5
    ArrowColor SeaGreen
}

package "Institution Management Context" <<Node>> #F0FFF0 {
    class Academy <<(A, #27D3F5) Aggregate Root>> {
        - Long id
        - AdministratorId adminId
        - Ruc ruc
        + addTeacher(Teacher)
        + assignAdministrator(Administrator)
    }

    class Administrator <<(A, #27D3F5) Aggregate Root>> {
        - Long id
        - AcademyId academyId
        - FullName fullName
    }

    class Teacher <<(A, #27D3F5) Aggregate Root>> {
        - Long id
        - AcademyId academyId
        - FullName fullName
    }

    class Ruc <<(V, #FFD700) Value Object>> {
        - String value
    }

    class AdministratorId <<(V, #FFD700) Value Object>> {
        - Long id
    }

    class TeacherId <<(V, #FFD700) Value Object>> {
        - Long id
    }

    ' Relationships
    Academy "1" *-- "1" Ruc : has >
    Academy "1" ..> "1" AdministratorId : isManagedBy >
    Academy "1" ..> "0..*" TeacherId : includes >
}

@enduml